<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextRecordNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/recordNote"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/timerBackground"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/timerbackground"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtTimer"
            style="@style/timerText"
            android:text="@string/timer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonarea"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startButton"
            style="@style/buttonText"
            android:layout_marginLeft="5dp"
            android:background="@drawable/startbuttonstates"
            android:shadowColor="#FBEBC5"
            android:text="@string/record"
            android:textColor="#5F3A00" />

        <Button
            android:id="@+id/stopButton"
            style="@style/buttonText"
            android:layout_marginRight="5dp"
            android:background="@drawable/stopbuttonstates"
            android:shadowColor="#959597"
            android:text="@string/stopRecord"
            android:textColor="#2E2E2E" />
    </LinearLayout>

</LinearLayout>