<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextReminderNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/Input"
        android:lines="2"
        android:padding="5dp"
        android:textColor="@android:color/darker_gray" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/timerbackground" >

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"            
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"            
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonarea"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDate"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/startbuttonstates"
            android:text="@string/date"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnTime"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/resetbuttonstates"
            android:text="@string/time"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonarea"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSet"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/stopbuttonstates"
            android:text="@string/set" />
    </LinearLayout>

</LinearLayout>